--- a/Korki/Korki.csproj
+++ b/Korki/Korki.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.20" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KorkiDataAccessLib\KorkiDataAccessLib.csproj" />
+  </ItemGroup>
+
 </Project>
